# Projekt_SK2

./: vote_client  vote_client.cpp  vote_server  vote_server.cpp
checkers/: CMakeCache.txt  CMakeLists.txt  board.cpp  board.h  cmake_install.cmake  game.h  king.cpp  king.h  main.cpp  pawn.cpp  pawn.h  piece.h
checkers_qt_client/: CMakeLists.txt  CMakeLists_server.txt  checkerpiecebutton.cpp  checkerpiecebutton.h  gameboardwindow.cpp  gameboardwindow.h  lobbywindow.cpp  lobbywindow.h  loginwindow.cpp  loginwindow.h  movevotingpanel.cpp  movevotingpanel.h  networkmanager.cpp  networkmanager.h  votingpanel.cpp  votingpanel.h
checkers_qt_client/server/: CMakeLists.txt  dummy_server.cpp  dummy_server.h
checkers_server/: Makefile  board.h  checkers  game.cpp  king.cpp  main.cpp  piece.cpp
